# wiz-ado-function

./: .gitignore  README.md
.github/workflows/: deploy-app.yml  deploy-infra.yml
app/: blueprint.py  function_app.py  pyproject.toml  requirements.txt  test_data.json  webhook_logic.py
app/src/webhook/: blueprint.py
infra/: main.tf  outputs.tf  providers.tf  variables.tf
